<resources>
    <string name="app_name">Coffee shop</string>

    <string name="helloagain">Hello Again!</string>
    <string name="welcomeback">Welcome Back You\'ve Been Missed</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Login</string>
    <string name="prodectname">Product</string>
    <string name="sizename">Size</string>
    <string name="price">$ 100</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">1</string>
    <string name="free_delivery">FREE delivery</string>
    <string name="instock">Available in stock</string>
    <string name="about">Product Description</string>
    <string name="aboutproduct">Hii this is ProductHii this is ProductHii this is ProductHii this is Product</string>
    <string name="entermail">Enter Email id</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enterpincode">Enter Pin Code</string>
    <string name="totalprice">Total price</string>
    <string name="loding">Loading...</string>
    <string name="cod">COD</string>
    <string name="expirydate">Expiry Date</string>
    <string name="date">MMYY</string>
    <string name="cvv">CVV</string>
    <string name="proseedtopayment">Proceed to Payment</string>
    <string name="getstart">Get Started</string>
    <string name="coffeetext">Discover, Brew, and Enjoy – The Coffee App for Coffee Lovers.</string>
    <string name="withmilk">With Oat Milk</string>
    <string name="rating">4.8</string>
    <string name="app_name2">Coffee Club</string>
</resources>